--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "start:dev": "nodemon app.js -e css,js,njk"
+    "start:dev": "nodemon app.js"
   },
   "author": "NeonEDuck",
   "license": "ISC",
