--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
     "googleapis": "^105.0.0",
+    "libreoffice-convert": "^1.4.1",
     "mime-types": "^2.1.35",
     "nodemon": "^2.0.21",
     "nunjucks": "^3.2.3"
