--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "libreoffice-convert": "^1.4.1",
     "mime-types": "^2.1.35",
     "nodemon": "^2.0.21",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "puppeteer": "^19.8.0"
   }
 }
